[package]
name = "tumongo"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = "1.0.142"
serde = { version = "1.0.219", features = ["derive"]}
mongodb = "3.2.4"
tumongo_macros = { version = "0.1.0", path = "tumongo_macros" }
once_cell = "1.21.3"
futures-util = "0.3.31"
strum_macros = "0.27.2"
strum = "0.27.2"
async-trait = "0.1.89"

[lints.rust]
dead-code = "allow"
