[package]
name = "tumongo_macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
syn = "2.0"
quote = "1.0"
darling = "0.21.0"
derive-syn-parse = "0.2.0"
strum = "0.27.2"
serde_json = "1.0.142"
once_cell = "1.21.3"
serde = { version = "1.0.219", features = ["derive"]}
mongodb = "3.2.4"
futures = "0.3.28"
chrono = "0.4.41"
strum_macros = "0.27.1"
tokio = "1.46.1"

[dependencies.proc-macro2]
version = "1"
default-features = false

[dependencies.turs]
version = "*"
# path = "../../turs"
git = "https://github.com/tonnidiaz/turs.git"
[lints.rust]
dead-code = "allow"