[package]
name = "tutest"
version = "0.1.0"
edition = "2024"

[dependencies]
tumongo = { version = "0.1.0", path = ".." }
serde_json = "1.0.142"
serde = { version = "1.0.219", features = ["derive"]}
tokio = { version = "1.47.1", features = ["full"] }
chrono = "0.4.41"

[lints.rust]
dead-code = "allow"
